# mogpio

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build-and-release.yml
cmake/: esp32.cmake  pico.cmake
src/: hal_gpio.c  hal_gpio.h  hal_gpio_board.c  hal_gpio_board.h  hal_gpio_flavor.h  hal_gpio_layout.h  logger.h  microrl_user_config.h  mogpio.c  msc_fs.c  msc_fs.h  terminal.c  terminal.h  tusb_config.h  usb_descriptors.c  usbio.c  usbio.h  util.c  util.h
src/driver/: esp32.c  piso.c  piso.h  rpi_pico.c  rpi_pico.h  sipo.c  sipo.h
src/flavors/: intern-sipo-piso.c  intern.c  sipo-piso.c
src/gpio/: esp32.h  piso.c  piso.h  rpi_pico.c  rpi_pico.h  sipo.c  sipo.h
src/layouts/: intern-sipo-piso.c  intern.c  sipo-piso.c
